$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Versin 1.16-20 (opened June 17, 2009)

	* new version opened concurrently with the release of vegan 1.15-3
	on June 17, 2009.
	
Version 1.16-19 (closed June 17, 2009)

	* capscale: handles now negative eigenvalues with semimetric
	indices. These cause no more warnings. The MDS engine is now
	'wcmdscale' instead of 'cmdscale' unless 'add = TRUE' was
	specified (and then negative eigenvalues are not produced). The
	negative eigenvalues are listed after positive unconstrained
	eigenvalues, but no scores are given for them. The total inertia
	is now the sum of all eigenvalues, including the negative ones,
	and inertia components adds item 'Imaginary' for negative
	eigenvalues after 'Uncostrained'. New argument 'sqrt.dist' makes
	square root transformation of dissimilarities, producing metric
	indices in many cases (e.g., Bray-Curtis, Jaccard). Help page and
	examples now show all these, and therefore the entry on negative
	eigenvalues was dropped from FAQ-vegan.texi. The closed (max 1)
	indices are now correctly adjusted for 'rda' and hence the
	eigenvalues and inertia components are now sqrt(n-1) smaller and
	similar as in 'cmdscale' and 'wcmdscale'.

	* wcmdscale: remove zero eigenvalues, keep negative, and do not
	assume that the last eigenvalue is zero. 

	* RsquareAdj: 'cca' returns R2, but no adjusted R2 (which is
	NA). The adjusted R2 is always NA for partial models. 

	* kendall.global: fixed a bug that caused incorrect counts of ties
	in large data sets.

	* tsallis: division by zero occurred with hill=TRUE, scale=1,
	this bug has been fixes to give exp(x) as scales goes to 1.

	* multipart: a sequel to adipart, but implements multiplicative
	diversity partitioning based on Hill numbers (Jost 2007,
	Ecology, 88, 2427-2439.)

	* eigenvals: new function to extract eigenvalues of cca, rda,
	capscale (constrained & unconstrained), wcmdscale, prcomp,